# signup-god

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/account_generators/: __init__.py  base.py  duck.py
src/checkcode/: __init__.py  base.py  mail_match.py  manual.py
src/checkcode/qq_mail/: __init__.py  cli.py  core.py  source.py
src/registrars/: __init__.py
src/registrars/deepseek/: __init__.py  __main__.py  cli.py  config.py  hash.py  pow.py  registrar.py  verification_mail.py
tests/: conftest.py  test_cli_register_parser.py  test_config_from_env.py  test_deepseek_biz_envelope.py  test_deepseek_hash_ds2api_vectors.py  test_guest_pow_parallel.py  test_main_retry_predicates.py  test_manual_checkcode_source.py  test_qq_checkcode_source.py  test_registrar_close_delegates.py  test_registrar_context_manager.py  test_registrar_http_mock.py  test_registrar_init_delegates.py  test_solve_pow_ds2api_vectors.py  test_verification_code_regex.py
