[project]
name = "signup-god"
version = "0.1.0"
description = "Pluggable signup orchestration: account generators + verification-code sources + per-site registrars (DeepSeek)."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/account_generators",
    "src/checkcode",
    "src/registrars",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
